# gfx

./: .buildconfig  .gitignore  .gitmodules  .monocodus  .project  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  bors.toml  build_all  deny.toml  doc  emscripten.html  linux-test.sh  output.txt  research.md  rustfmt.toml
cube/: Cargo.toml
deferred/: Cargo.toml
deferred/src/: main.rs
examples/: Cargo.toml  Makefile  README.md
examples/1-quad/: main.rs
examples/2-compute/: main.rs
examples/bench/: main.rs
examples/blend/: compile.cmd  main.rs
examples/blend/data/: pixel.fx
examples/blend/shader/: blend.hlsl  blend_150.glslf  blend_150_core.glslf  blend_300_es.glslf
examples/color-uniform/: main.rs
examples/color-uniform/data/: quad.frag
examples/colour-uniform/: README.md  main.rs
examples/compute/: main.rs
examples/core/quad/: Cargo.toml  main.rs
examples/corell/trianglell/: main.rs
examples/cube/: Cargo.toml  README.md  compile.cmd  cube_120.glslf  cube_120.glslv  cube_150.glslf  cube_150.glslv  main.rs
examples/cube/data/: frag.spv  pixel.fx  vert.spv  vertex.fx
examples/cube/shader/: cube.hlsl  cube_100_es.glslf  cube_100_es.glslv  cube_120.glslv  cube_150.glslf  cube_150.glslv  cube_300_es.glslf  cube_300_es.glslv  cube_frag.metal  cube_vertex.metal  cube_vulkan.glsl.frag  cube_vulkan.glsl.vert  make_vulkan.sh
examples/deferred/: README.md  compile.cmd  deferred.hlsl  main.rs
examples/deferred/data/: blit_ps.fx  blit_vs.fx  emitter_vs.fx  light_ps.fx  light_vs.fx  terrain_ps.fx  terrain_vs.fx
examples/deferred/shader/: blit.glslv  blit_frag.metal  deferred.hlsl  emitter.glslf  emitter.glslv  emitter_frag.metal  light.glslf  light.glslv  light_vertex.metal  terrain.glslv  terrain_vertex.metal
examples/flowmap/: main.rs
examples/flowmap/data/: pixel.fx  vertex.fx
examples/flowmap/shader/: flowmap.hlsl  flowmap_120.glslf  flowmap_120.glslv  flowmap_150.glslf  flowmap_150_core.glslf  flowmap_300_es.glslf  flowmap_300_es.glslv
examples/gamma/: README.md  main.rs
examples/gamma/shader/: quad_120.glslv
examples/gl-init/: Cargo.toml  main.rs
examples/glutin/: main.rs
examples/hal/: Cargo.toml
examples/hal/compute/: Cargo.toml  main.rs
examples/hal/quad/: Cargo.toml  main.rs
examples/instancing/: README.md  compile.cmd  instancing_120.glslv  instancing_150.glslf  instancing_150.glslv  main.rs
examples/instancing/data/: pixel.fx  vertex.fx
examples/instancing/shader/: instancing.hlsl  instancing_120.glslf  instancing_120.glslv  instancing_150.glslf  instancing_300_es.glslf  instancing_300_es.glslv  instancing_vertex.metal
examples/mesh-shading/: main.rs
examples/mesh-shading/data/: triangles.frag  triangles.frag.spv  triangles.mesh  triangles.mesh.spv
examples/mipmap/: compile.cmd  main.rs
examples/mipmap/data/: pixel.fx
examples/mipmap/shader/: 120.glslf  150.glslf  150.glslv  150_core.glslf  300_es.glslf  fx.hlsl
examples/particle/: main.rs
examples/particle/data/: gs_particle.fx  ps_particle.fx  vs_particle.fx
examples/particle/shader/: particle_150.glslg  particle_150.glslv
examples/performance/: Cargo.toml  main.rs
examples/quad/: README.md  main.rs
examples/quad-multiview/: README.md  main.rs
examples/quad-multiview/data/: index.html  quad.frag  quad.vert
examples/quad/data/: index.html  quad.vert.spv  spirv_cross_wrapper_glsl.js  spirv_cross_wrapper_glsl.wasm
examples/quad_android/: Cargo.toml  README.md
examples/quad_android/src/: lib.rs
examples/quad_windowless/: main.rs
examples/quad_windowless/data/: quad.vert
examples/ray-tracing/: README.md  build-shaders.ps1  main.rs
examples/ray-tracing/data/: simple.rchit  simple.rchit.spv  simple.rgen  simple.rgen.spv  simple.rmiss  simple.rmiss.spv
examples/render/gamma/: README.md  compile.cmd  main.rs
examples/render/quad_render/: Cargo.toml  main.rs
examples/render/triangle/: README.md  main.rs
examples/render_target/: README.md  compile.cmd  main.rs
examples/render_target/shader/: cubemap_150.glslf  render_150.glslf  render_150.glslg  render_150.glslv
examples/shadow/: README.md  compile.cmd  main.rs
examples/shadow/data/: forward_ps.fx  forward_vs.fx  shadow_ps.fx  shadow_vs.fx
examples/shadow/shader/: forward.hlsl  forward_150.glslf  forward_150.glslv  forward_300_es.glslf  forward_300_es.glslv  forward_frag.metal  shadow.hlsl  shadow_150.glslf  shadow_150.glslv  shadow_150_core.glslv  shadow_300_es.glslf  shadow_300_es.glslv  shadow_frag.metal  shadow_vertex.metal
examples/skybox/: README.md  main.rs
examples/skybox/shader/: cubemap_150.glslf  cubemap_150.glslv  cubemap_300_es.glslf  cubemap_300_es.glslv
examples/support/blend/: README.md  main.rs
examples/support/cube/: README.md  main.rs
examples/support/deferred/: README.md  compile.cmd  main.rs
examples/support/flowmap/: README.md  compile.cmd  main.rs
examples/support/instancing/: README.md  main.rs
examples/support/mipmap/: compile.cmd  main.rs
examples/support/particle/: README.md  compile.cmd  main.rs
examples/terrain/: Cargo.toml  README.md  compile.cmd  main.rs  terrain.hlsl  terrain_120.glslf  terrain_120.glslv  terrain_150.glslf  terrain_150.glslv
examples/terrain_tessellated/: README.md  compile.cmd  main.rs
examples/triangle/: Cargo.toml  README.md  compile.cmd  main.rs  triangle.hlsl  triangle_150.glslf  triangle_150.glslv
examples/triangle_glfw/: compile.cmd  main.rs
examples/trianglell/: main.rs
examples/ubo_tilemap/: README.md  main.rs  tilemap_140.glslf  tilemap_140.glslv  tilemap_150.glslf  tilemap_150.glslv
glutin/: Cargo.toml
performance/: Cargo.toml
src/backend/gl/: build.rs  (+2 more)
src/bal/: Cargo.toml
src/core/: Cargo.toml
src/corell/: Cargo.toml
src/gfx_app/: Cargo.toml
src/hal/: Cargo.toml
src/macros/: Cargo.toml  mod.rs
src/render/: Cargo.toml  batch.rs  device_ext.rs  envir.rs  front.rs  lib.rs  mesh.rs  mod.rs  plugin.rs  rast.rs  resource.rs  shade.rs  state.rs  target.rs  tex.rs
src/support/: Cargo.toml
src/warden/: Cargo.toml  README.md
triangle/: Cargo.toml
(+687 files in other folders)
