[workspace]

members = [
    "src/auxil/auxil",
    "src/auxil/range-alloc",
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/backend/webgpu",
    "src/hal",
    "src/warden",
    "examples",
]

[patch."https://github.com/gfx-rs/naga"]
naga = { git = "https://github.com/expenses/naga", branch = "metal-serialize-entry-point-error-gfx-20" }

[patch."crates-io"]
spirv_cross = { git = "https://github.com/expenses/spirv_cross", branch = "serialize-feature" }
