[workspace]

members = [
    "src/auxil/auxil",
    "src/auxil/external-memory",
    "src/auxil/range-alloc",
    "src/auxil/renderdoc",
    "src/backend/dx11",
    "src/backend/dx12",
    "src/backend/empty",
    "src/backend/gl",
    "src/backend/metal",
    "src/backend/vulkan",
    "src/backend/webgpu",
    "src/hal",
    "src/warden",
    "examples",
]

[patch."https://github.com/gfx-rs/naga"]
#naga = { path = "../naga" }
