[package]
name = "gfx_examples"
version = "0.1.0"
publish = false
workspace = ".."

[features]
default = ["gl"]
mint = ["gfx/mint", "gfx_core/mint"]
metal = ["gfx_device_metal", "gfx_window_metal"]
#metal_argument_buffer = ["gfx_device_metalll/argument_buffer"]
gl = ["gfx_device_gl", "gfx_window_glutin"]
dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]
dx12 = ["gfx_device_dx12", "gfx_window_dxgi"]
vulkan = ["gfx_device_vulkan"]
sdl = ["gfx_window_sdl"]
serialize = ["gfx/serialize", "gfx_core/serialize"]
headless = ["gfx_window_glutin/headless"]
unstable = []

[dependencies]
log = "0.3"
env_logger = "0.4"
glutin = "0.9"
winit = "0.7"

cgmath = "0.15"
gfx_gl = "0.3"
rand = "0.3"
genmesh = "0.5"
noise = "0.4"
image = "0.15"

gfx = { path = "../src/render", version = "0.16" }
gfx_core = { path = "../src/core", version = "0.7.1" }
gfx_support = { path = "../src/support", version = "0.7" }

gfx_device_gl = { path = "../src/backend/gl", version = "0.14", optional = true }
gfx_window_glutin = { path = "../src/window/glutin", version = "0.17", optional = true }

[dependencies.gfx_device_vulkan]
path = "../src/backend/vulkan"
version = "0.2"
optional = true

[dependencies.gfx_device_metal]
path = "../src/backend/metal"
version = "0.3"
optional = true

[dependencies.gfx_window_metal]
path = "../src/window/metal"
version = "0.4"
optional = true

#[dependencies.gfx_device_metalll]
#path = "../src/backend/metalll"
#version = "0.2"
#optional = true
#features = ["native_fence"]

[dependencies.gfx_window_sdl]
path = "../src/window/sdl"
version = "0.7"
optional = true

[target.'cfg(unix)'.dependencies]
gfx_window_glfw = { path = "../src/window/glfw", version = "0.15" }
gfx_window_sdl = { path = "../src/window/sdl", version = "0.7" }

[target.'cfg(windows)'.dependencies]
gfx_device_dx11 = { path = "../src/backend/dx11", version = "0.6", optional = true }
gfx_device_dx12 = { path = "../src/backend/dx12", version = "0.1", optional = true }
gfx_window_dxgi = { path = "../src/window/dxgi", version = "0.9", optional = true }
#gfx_device_dx12ll = { path = "../src/backend/dx12ll", version = "0.1", optional = true }

# Support examples.
[[bin]]
name = "blend"
path = "support/blend/main.rs"

[[bin]]
name = "cube"
path = "support/cube/main.rs"

[[bin]]
name = "deferred"
path = "support/deferred/main.rs"

[[bin]]
name = "flowmap"
path = "support/flowmap/main.rs"

[[bin]]
name = "performance"
path = "support/performance/main.rs"

[[bin]]
name = "shadow"
path = "support/shadow/main.rs"

[[bin]]
name = "skybox"
path = "support/skybox/main.rs"

[[bin]]
name = "terrain"
path = "support/terrain/main.rs"

[[bin]]
name = "terrain_tessellated"
path = "support/terrain_tessellated/main.rs"

[[bin]]
name = "instancing"
path = "support/instancing/main.rs"

[[bin]]
name = "ubo_tilemap"
path = "support/ubo_tilemap/main.rs"

[[bin]]
name = "mipmap"
path = "support/mipmap/main.rs"

[[bin]]
name = "particle"
path = "support/particle/main.rs"

[[bin]]
name = "triangle"
path = "support/triangle/main.rs"

# core examples
#[[bin]]
#name = "quad"
#path = "core/quad/main.rs"

# render examples
[[bin]]
name = "triangle_render"
path = "render/triangle/main.rs"

[[bin]]
name = "gamma"
path = "render/gamma/main.rs"
