[package]
name = "hal-examples"
version = "0.1.0"
publish = false
workspace = ".."
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "colour-uniform"
path = "colour-uniform/main.rs"

[[bin]]
name = "quad"
path = "quad/main.rs"

[[bin]]
name = "compute"
path = "compute/main.rs"

[dependencies]
env_logger = "0.6"
image = "0.21"
log = "0.4"
gfx-hal = { path = "../src/hal", version = "0.2" }
gfx-backend-empty = { path = "../src/backend/empty", version = "0.2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.19"
glsl-to-spirv = "0.1.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
path = "../src/backend/gl"
version = "0.2"
features = ["glutin"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.gfx-backend-gl]
path = "../src/backend/gl"
version = "0.2"
default-features = false
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.32"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
path = "../src/backend/vulkan"
version = "0.2"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
path = "../src/backend/metal"
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
path = "../src/backend/dx11"
version = "0.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../src/backend/dx12"
version = "0.2"
optional = true
