[package]
name = "hal-examples"
version = "0.1.0"
publish = false
workspace = ".."
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "colour-uniform"
path = "colour-uniform/main.rs"

[[bin]]
name = "quad"
path = "quad/main.rs"

[[bin]]
name = "compute"
path = "compute/main.rs"

[[bin]]
name = "mesh-shading"
path = "mesh-shading/main.rs"

[[bin]]
name = "bench"
path = "bench/main.rs"

[dependencies]
image = "0.23.12"
log = "0.4"
hal = { path = "../src/hal", version = "0.7", package = "gfx-hal" }
auxil = { path = "../src/auxil/auxil", version = "0.8", package = "gfx-auxil" }
gfx-backend-empty = { path = "../src/backend/empty", version = "0.7" }
winit = { version = "0.24", features = ["web-sys"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.8"
glsl-to-spirv = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[dependencies.gfx-backend-vulkan]
path = "../src/backend/vulkan"
version = "0.7"
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
path = "../src/backend/gl"
version = "0.7"
optional = true

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
path = "../src/backend/gl"
version = "0.7"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
path = "../src/backend/metal"
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
path = "../src/backend/dx11"
version = "0.7"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../src/backend/dx12"
version = "0.7"
optional = true
