[package]
name = "gfx-gl-triangle"
version = "0.0.1"

[[bin]]
name = "gfx-gl-triangle"
path = "src/main.rs"

[dependencies]
glfw = "*"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"
version = "*"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"
version = "*"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs"
plugin = true
version = "*"
