[package]
name = "hal-examples"
version = "0.1.0"
publish = false
workspace = "../.."

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "quad"
path = "quad/main.rs"

[[bin]]
name = "compute"
path = "compute/main.rs"

[dependencies]
env_logger = "0.5"
image = "0.18"
log = "0.4"
winit = "0.11"
gfx-hal = { path = "../../src/hal", version = "0.1" }

[dependencies.gfx-backend-gl]
path = "../../src/backend/gl"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
path = "../../src/backend/vulkan"
version = "0.1"
#features = ["glsl-to-spirv"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
path = "../../src/backend/metal"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../src/backend/dx12"
version = "0.1"
optional = true
