[package]

name = "gfx-perf"
version = "0.1.0"
authors = [
]

[[bin]]
name = "gfx-perf"
path = "main.rs"

[dependencies.gfx]
path = "../../"

[dependencies.gfx_gl]
path = "../../"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.cgmath]
git = "http://github.com/bjz/cgmath-rs"
