[package]

name = "gfx-perf"
version = "0.1.0"
authors = [
]

[[bin]]
name = "gfx-perf"
path = "main.rs"

[dependencies.gfx]
path = "../../"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.gfx_gl]
git = "https://github.com/gfx-rs/gfx_gl.git"

[dependencies.cgmath]
git = "http://github.com/bjz/cgmath-rs"
