[package]
name = "gfx-bal"
version = "0.1.0"
description = "gfx-rs backend abstraction layer"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-hal"
workspace = "../.."

[lib]
name = "gfx_bal"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["serde_derive"], optional = true }
