[package]
name = "gfx_core"
version = "0.10.0"
description = "Core library of Gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_core"
workspace = "../.."

[features]
#TODO: switch to pure `serde` feature once `draw_state` is no longer used
serialize = ["serde", "serde_derive", "draw_state/serialize"]
unstable = []

[lib]
name = "gfx_core"
path = "src/lib.rs"

[dependencies]
bitflags = "0.8"
mint = { version = "0.4.1", optional = true }
draw_state = "0.7"
log = "0.3"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
smallvec = "0.4"

[dev-dependencies]
empty = { path = "../backend/empty", version = "0.1" }
