[package]
name = "gfx-hal"
version = "0.1.0"
description = "Core library of Gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-hal"
workspace = "../.."

[features]
#TODO: switch to pure `serde` feature once `draw_state` is no longer used
serialize = ["serde", "draw_state/serialize"]
unstable = []

[lib]
name = "gfx_hal"
path = "src/lib.rs"

[dependencies]
bitflags = "0.8"
mint = { version = "0.4.1", optional = true }
draw_state = "0.7"
log = "0.3"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
smallvec = "0.4"

[dev-dependencies]
gfx-backend-empty = { path = "../backend/empty", version = "0.1" }
