# Copyright 2016 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_core"
version = "0.9.1"
description = "Core library of Gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_core"

[lib]
name = "gfx_core"
path = "src/lib.rs"

[dependencies]
bitflags = "1"
mint = { version = "0.5", optional = true }
derivative = "1"
draw_state = "0.8"
log = "0.4"
serde = { version = "1", features = ["serde_derive"], optional = true }

[features]
serialize = ["serde", "draw_state/serde"]
unstable = []
