# Copyright 2016 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_corell"
version = "0.1.1"
description = "Core (Low Level) library of Gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_corell"
path = "src/lib.rs"

[dependencies]
bitflags = "0.8"
log = "0.3"
draw_state = "0.6"
