[package]
name = "gfx_corell"
version = "0.1.1"
description = "Core (Low Level) library of Gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
workspace = "../.."

[lib]
name = "gfx_corell"
path = "src/lib.rs"

[dependencies]
bitflags = "0.8"
log = "0.3"
draw_state = "0.6"
