# Copyright 2017 The Gfx-rs Developers.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "gfx_app"
version = "0.6.0"
description = "GFX example application framework"
homepage = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_app"

[lib]
name = "gfx_app"
path ="src/lib.rs"

[dependencies]
log = "0.3"
env_logger = "0.4"
glutin = "0.8.0"
winit = "0.6"
gfx_core = { path = "../core", version = "0.7" }
gfx_corell = { path = "../corell", version = "0.1" }
gfx = { path = "../..", version = "0.16" }
gfx_macros = { path = "../macros", version = "0.2" }
gfx_device_gl = { path = "../backend/gl", version = "0.14" }
gfx_window_glutin = { path = "../window/glutin", version = "0.16" }
