[package]
name = "gfx-hal"
version = "0.1.0"
description = "gfx-rs hardware abstraction layer"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-hal"
workspace = "../.."

[features]
unstable = []

[lib]
name = "gfx_hal"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0"
mint = { version = "0.5", optional = true }
failure = "0.1"
serde = { version = "1", features = ["serde_derive"], optional = true }
smallvec = "0.6"
fxhash = "0.2.1"

[dev-dependencies]
gfx-backend-empty = { path = "../backend/empty", version = "0.1" }
