[package]
name = "gfx_macros"
version = "0.2.1"
description = "Custom derive macros for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx_macros"
categories = ["rendering::graphics-api"]
workspace = "../.."

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[dev-dependencies]
gfx = { path = "../render", version = "0.16" }
