[package]
name = "gfx"
version = "0.16.0"
description = "A high-performance, bindless graphics API"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "../../README.md"
documentation = "https://docs.rs/gfx"
categories = ["rendering::graphics-api"]
workspace = "../.."

[lib]
name = "gfx"
path = "src/lib.rs"

[features]
serialize = ["gfx_core/serialize", "draw_state/serialize"]
unstable = []

[dependencies]
mint = { version = "0.4.1", optional = true }
derivative = "1.0"
draw_state = "0.7"
gfx_core = { path = "../core", version = "0.10" }
log = "0.3"

