[package]
name = "gfx-render"
version = "0.1.0"
description = "gfx-rs higher rendering layer"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "../../README.md"
documentation = "https://docs.rs/gfx-render"
categories = ["rendering::graphics-api"]
workspace = "../.."

[lib]
name = "gfx_render"
path = "src/lib.rs"

[features]
serialize = ["serde", "gfx-hal/serde"]
unstable = []

[dependencies]
bitflags = "1.0"
mint = { version = "0.4.1", optional = true }
gfx-hal = { path = "../hal", version = "0.1" }
log = "0.3"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
