[package]
name = "gfx-warden"
version = "0.1.0"
description = "gfx-rs reftest framework"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "../../README.md"
documentation = "https://docs.rs/gfx-render"
categories = ["rendering::graphics-api"]
workspace = "../.."

[lib]
name = "gfx_warden"
path = "src/lib.rs"

[features]
default = ["glsl-to-spirv"]
vulkan = ["gfx-backend-vulkan"]
dx12 = ["gfx-backend-dx12"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
gl-headless = ["gfx-backend-gl"] # "glsl-to-spirv"

#TODO: keep Warden backend-agnostic?

[dependencies]
failure = "0.1"
gfx-hal = { path = "../hal", version = "0.1", features = ["serde"] }
log = "0.4"
ron = "0.1.7"
serde = { version = "1", features = ["serde_derive"] }
env_logger = { version = "0.5", optional = true }
glsl-to-spirv = { version = "0.1", optional = true }

[dependencies.gfx-backend-vulkan]
path = "../../src/backend/vulkan"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../src/backend/dx12"
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
path = "../../src/backend/metal"
version = "0.1"
optional = true

[dependencies.gfx-backend-gl]
path = "../../src/backend/gl"
version = "0.1"
features = ["glutin"]
optional = true

[[example]]
name = "basic"
required-features = ["gl", "glsl-to-spirv"]
