[package]
name = "gfx-warden"
version = "0.1.0"
description = "gfx-rs reftest framework"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "../../README.md"
documentation = "https://docs.rs/gfx-render"
categories = ["rendering::graphics-api"]
workspace = "../.."
edition = "2018"
publish = false

[lib]
name = "gfx_warden"

[features]
default = ["glsl-to-spirv"]
vulkan = ["gfx-backend-vulkan"]
dx12 = ["gfx-backend-dx12"]
dx11 = ["gfx-backend-dx11"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]

#TODO: keep Warden backend-agnostic?

[dependencies]
auxil = { path = "../auxil/auxil", version = "0.5", package = "gfx-auxil" }
hal = { path = "../hal", version = "0.6", package = "gfx-hal", features = ["serde"] }
log = "0.4"
ron = "0.6"
serde = { version = "1", features = ["serde_derive"] }
env_logger = { version = "0.8", optional = true }
glsl-to-spirv = { version = "0.1", optional = true }

[dependencies.gfx-backend-vulkan]
path = "../../src/backend/vulkan"
version = "0.6"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../src/backend/dx12"
version = "0.6"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
path = "../../src/backend/dx11"
version = "0.6"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.gfx-backend-metal]
path = "../../src/backend/metal"
version = "0.6"
features = ["auto-capture"]
optional = true

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos"), not(target_os = "android")))'.dependencies.gfx-backend-gl]
path = "../../src/backend/gl"
version = "0.6"
optional = true

[[example]]
name = "basic"
required-features = ["gl", "glsl-to-spirv"]
