[package]
name = "quad"
version = "0.1.0"
publish = false
workspace = "../../.."

[features]
default = ["vulkan"]
metal = ["gfx_backend_metal"]
gl = ["glutin", "gfx_backend_gl"]
#dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]
dx12 = ["gfx_backend_dx12"]
vulkan = ["gfx_backend_vulkan"]
unstable = []

[[bin]]
name = "quad"
path = "main.rs"

[dependencies]
env_logger = "0.4"
glutin = { version = "0.9", optional = true }
image = "0.15"
log = "0.3"
winit = "0.7"
gfx_core = { path = "../../../src/core", version = "0.10" }

[dependencies.gfx_backend_gl]
path = "../../../src/backend/gl"
version = "0.1"
optional = true

[dependencies.gfx_backend_vulkan]
path = "../../../src/backend/vulkan"
version = "0.1"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
gfx_backend_metal = { path = "../../../src/backend/metal", version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
#gfx_device_dx11 = { path = "../../../src/backend/dx11", version = "0.6", optional = true }
gfx_backend_dx12 = { path = "../../../src/backend/dx12", version = "0.1", optional = true }

