[package]
name = "compute"
version = "0.1.0"
publish = false
workspace = "../../.."

[features]
default = []
metal = ["gfx-backend-metal"]
#dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "compute"
path = "main.rs"

[dependencies]
env_logger = "0.4"
glutin = { version = "0.9", optional = true }
image = "0.15"
log = "0.3"
winit = "0.7"
gfx-hal = { path = "../../../src/hal", version = "0.1" }

[dependencies.gfx-backend-gl]
path = "../../../src/backend/gl"
version = "0.1"
optional = true

[dependencies.gfx-backend-vulkan]
path = "../../../src/backend/vulkan"
version = "0.1"
optional = true
features = ["glsl-to-spirv"]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
path = "../../../src/backend/metal"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../../src/backend/dx12"
version = "0.1"
optional = true
