[package]
name = "quad-render"
version = "0.1.0"
publish = false
workspace = "../../.."

[[bin]]
name = "quad_render"
path = "main.rs"

[dependencies]
env_logger = "0.4"
glutin = { version = "0.9", optional = true }
image = "0.15"
log = "0.3"
winit = "0.7"
gfx-hal = { path = "../../../src/core", version = "0.1" }
gfx-render = { path = "../../../src/render", version = "0.1" }

gfx-backend-vulkan = { path = "../../../src/backend/vulkan", version = "0.1" }
