[package]
name = "quad-render"
version = "0.1.0"
publish = false
workspace = "../../.."

[[bin]]
name = "quad_render"
path = "main.rs"

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]
metal = ["gfx-backend-metal"]

[dependencies]
env_logger = "0.5"
glutin = { version = "0.13", optional = true }
image = "0.18"
log = "0.4"
winit = "0.11"
gfx-hal = { path = "../../../src/hal", version = "0.1" }
gfx-render = { path = "../../../src/render", version = "0.1" }

gfx-backend-vulkan = { path = "../../../src/backend/vulkan", version = "0.1", optional = true }
gfx-backend-metal = { path = "../../../src/backend/metal", optional = true }



