[package]
name = "gfx-renderdoc"
version = "0.1.0"
description = "Generic RenderDoc integration used by gfx-rs backends"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["renderdoc"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
documentation = "https://docs.rs/gfx-auxil-renderdoc"
categories = ["graphics"]
workspace = "../../../"
edition = "2018"

[lib]
name = "gfx_renderdoc"

[dependencies]
renderdoc-sys = "0.7.1"
libloading = "0.7"
log = "0.4"