[package]
name = "gfx-backend-dx11"
version = "0.1.0"
description = "DirectX-11 API backend for gfx-rs"
homepage = "https://github.com/gfx-rs/gfx"
repository = "https://github.com/gfx-rs/gfx"
keywords = ["graphics", "gamedev"]
license = "MIT OR Apache-2.0"
authors = ["The Gfx-rs Developers"]
readme = "README.md"
documentation = "https://docs.rs/gfx-backend-dx11"
workspace = "../../.."

[features]
default = ["winit"]

[lib]
name = "gfx_backend_dx11"

[dependencies]
bitflags = "1"
derivative = "1"
gfx-hal = { path = "../../hal", version = "0.1" }
log = { version = "0.4", features = ["release_max_level_error"] }
smallvec = "0.6"
spirv_cross = "0.9"
parking_lot = "0.6.3"
winapi = { version = "0.3", features = ["basetsd","d3d11", "d3d11sdklayers", "d3dcommon","d3dcompiler","dxgi1_2","dxgi1_3","dxgi1_4", "dxgi1_5", "dxgiformat","dxgitype","handleapi","minwindef","synchapi","unknwnbase","winbase","windef","winerror","winnt","winuser"] }
winit = { version = "0.16", optional = true }
wio = "0.2"
